--- a/sitedata/awards.yml
+++ b/sitedata/awards.yml
@@ -3,27 +3,38 @@
   description: something
   awardees:
     - name: Michael Bowling
+      link: https://webdocs.cs.ualberta.ca/~bowling/
       id: ae1
+      image: michael_bowling.png
       organization: University of Alberta and DeepMind, Canada
       description: For significant contributions to game-playing theory and practice and to machine learning
     - name: Ashok Goel
+      link: http://dilab.gatech.edu/ashok-k-goel/
       id: ae2
+      image: ashok_goel.jpg
       organization: Georgia Institute of Technology, USA
       description: For significant contributions to research on cognitive systems, design, and education, and for distinguished leadership and teaching
     - name: Malte Helmert
       id: ae3
+      link: https://ai.dmi.unibas.ch/people/helmert/
+      image: malte_helmert.jpg
       organization: University of Basel, Switzerland
       description: For significant contributions to the theory and practice of automated planning and combinatorial search
     - name: Jörg Hoffmann
       id: ae4
+      link: http://fai.cs.uni-saarland.de/hoffmann/
+      image: joerg_hoffmann.jpg
       organization: Saarland University, Germany
       description: For significant contributions to AI planning and related areas, particularly in the design and analysis of heuristic functions and other search methods
     - name: Ayanna Howard
       id: ae5
+      link: https://howard.ece.gatech.edu/
       organization: Georgia Institute of Technology, USA
       description: For significant contributions to human-robot interaction and for improving access and equity through artificial intelligence technologies
     - name: Odest Chadwicke Jenkins
       id: ae6
+      link: https://web.eecs.umich.edu/~ocj/
+      image: chad_jenkins.jpg
       organization: University of Michigan, USA
       description: For significant contributions to the field of human-robot interaction and extensive service in broadening participation in artificial intelligence
     - name: Hiroaki Kitano
@@ -32,14 +43,20 @@
       description: For significant contributions and leadership in robotics, massively parallel AI, and the use of AI for scientific discovery and systems biology
     - name: Rada Mihalcea
       id: ae8
+      link: https://web.eecs.umich.edu/~mihalcea/
+      image: rada_mihalcea.jpg
       organization: University of Michigan, USA
       description: For significant contributions to natural language processing and computational social science 
     - name: Antonio Torralba
       id: ae9
+      image: antonio_torralba.jpg
+      link: https://groups.csail.mit.edu/vision/torralbalab/
       organization: Massachusetts Institute of Technology, USA
       description: For significant contributions to scene recognition, large-scale visual datasets, and transfer learning
     - name: Holly Yanco
+      link: https://www.cs.uml.edu/~holly/
       id: ae10
+      image: holly_yanco.jpg
       organization: University of Massachusetts Lowell, USA
       description: For foundational contributions to the field of human-robot interaction and for exceptional leadership in education and broadening participation
 
@@ -49,30 +66,48 @@
   awardees:
     - name: Haris Aziz
       id: ae1
+      link: https://sites.google.com/site/harisaziz/
+      image: haris_aziz.jpg
       organization: University of New South Wales Sydney, Australia
     - name: Ece Kamar
       id: ae2
+      link: https://www.ecekamar.com/
+      image: ece_kamar.webp
       organization: Microsoft Research, USA
     - name: Akshat Kumar
       id: ae3
+      link: http://www.mysmu.edu/faculty/akshatkumar/
+      image: akshat_kumar.jpg
       organization: Singapore Management University, Singapore
     - name: Sriraam Natarajan
       id: ae4
+      link: https://personal.utdallas.edu/~sriraam.natarajan/
+      image: sriraam_natarajan.jpg
       organization: University of Texas at Dallas, USA
     - name: Siddharth Srivastava
       id: ae5
+      link: http://siddharthsrivastava.net/
+      image: siddharth_srivastava.jpg
       organization: Arizona State University, USA
     - name: Gita Sukthankar
       id: ae6
+      link: https://www.eecs.ucf.edu/~gitars/
+      image: gita_sukthankar.jpg
       organization: University of Central Florida, USA
     - name: Kartik Talamadupula
       id: ae7
+      link: http://www.ktalamad.com/
+      image: kartik_talamadupula.jpg
       organization: IBM Research, USA
     - name: William Yeoh
       id: ae8
+      link: https://sites.wustl.edu/wyeoh/
+      image: william_yeoh.jpg
       organization: Washington University in St. Louis, USA
     - name: Neil Yorke-Smith
       id: ae9
+      link: http://homepage.tudelft.nl/0p6y8/
+      image: neil_yorke_smith.jpg
       organization: Delft University of Technology, Netherlands
 
 - name: 2021 AAAI Squirrel AI Award for Artificial Intelligence for the Benefit of Humanity
@@ -81,6 +116,8 @@
   awardees:
     - name: Regina Barzilay
       id: ae1
+      link: https://www.regina.csail.mit.edu/
+      image: regina_barzilay.webp
       organization: Massachusetts Institute of Technology, USA
       description: For fundamental advances in AI for healthcare, being a proactive community builder and role model, and demonstrating significant impact in people's lives through cancer diagnosis, drug-resistant microbe antibiotics, and drug discovery.
       talk:
@@ -95,6 +132,8 @@
   awardees:
     - name: Carla P. Gomes
       id: ae1
+      link: https://www.cs.cornell.edu/gomes/
+      image: carla_gomes.png
       organization: Cornell University, USA
       description: For high-impact contributions to the field of artificial intelligence through innovations in constraint reasoning, optimization, the integration of reasoning and learning, and through founding the field of Computational Sustainability with impactful AI applications in ecology, species conservation, environmental sustainability, and materials discovery for clean energy.
 
@@ -104,6 +143,8 @@
   awardees:
     - name: Charles Isbell
       id: ae1
+      link: https://www.cc.gatech.edu/~isbell/
+      image: charles_isbell.jpg
       organization: Georgia Institute of Technology, USA
       description: For significant contributions to the field of artificial intelligence and computing education through sustained service to AAAI and other core computing organizations and tirelessly working to increase access and diversity in AI and computing.
 
@@ -113,6 +154,8 @@
   awardees:
     - name: Tuomas Sandholm
       id: ae1
+      link: http://www.cs.cmu.edu/~sandholm/
+      image: tuomas_sandholm.jpg
       organization: Carnegie Mellon University, Optimized Markets, Inc., Strategy Robot, Inc., Strategic Machine, Inc., USA
       description: For outstanding research contributions in Artificial Intelligence, its application to electronic market places, the highly original use of AI in strategic multi-player games, and the application of AI to optimize organ exchanges
       talk:
@@ -126,6 +169,8 @@
   description: something
   awardees:
     - name: Michael Wooldridge
+      link: https://www.cs.ox.ac.uk/people/michael.wooldridge/
+      image: michael_wooldridge.jpg
       id: ae1
       organization: University of Oxford and Alan Turing Institute, London
       description: For outstanding global leadership in AI education and public awareness, including publishing broadly adopted books and textbooks, establishing the European Agent Systems Summer School, and inspiring public dialogue on AI and multi-agent systems.
@@ -140,6 +185,7 @@
   awardees:
     - name: "DL-Lite: Tractable Description Logics for Ontologies"
       id: ae1
+      link: https://www.aaai.org/Papers/AAAI/2005/AAAI05-094.pdf
       organization: Diego Calvanese, Giuseppe De Giacomo, Domenico Lembo, Maurizio Lenzerini, and Riccardo Rosati
       description: For proposing basic knowledge representation languages with low complexity of reasoning that have had significant impact beyond AI into semantic foundations for the Web
       talk:
@@ -153,6 +199,8 @@
   description: something
   awardees:
     - name: Jiajun Wu
+      link: https://jiajunwu.com/
+      image: jiajun_wu.jpg
       id: ae1
       organization: Massachusetts Institute of Technology, USA
       description: For his work entitled Learning to See the Physical World
@@ -161,16 +209,14 @@
           start_time: 2021-02-05 00:00:00+00:00
           end_time: 2021-02-05 23:00:00+00:00
           link: /
-
-- name: Honorable Mention
-  id: a10
-  description: something
-  awardees:
-    - name: Aishwarya Agrawal
+    - name: Aishwarya Agrawal (Honorable Mention)
       id: ae1
+      link: https://www.cc.gatech.edu/grads/a/aagrawal307/
+      image: aishwarya_agrawal.jpg
       organization: Georgia Institute of Technology
       description: For her work entitled Visual Question Answering and Beyond
-    - name: Li Dong
+    - name: Li Dong (Honorable Mention)
+      link: http://dong.li/
       id: ae2
       organization: University of Edinburgh
       description: For his work entitled Learning Natural Language Interfaces with Neural Models
