update content in faq and code of conduct

--- a/sitedata/code_of_conduct.yml
+++ b/sitedata/code_of_conduct.yml
@@ -24,6 +24,47 @@ CodeOfConduct: >
     
   To report any behavior that violates this code of conduct, please immediately report the conduct complained of to an AAAI representative at the conference or event or contact (by email or in person) the AAAI Executive Director or any AAAI Officer. Complaints will be reviewed by a subcommittee of the Executive Council, and may be referred to law enforcement when warranted. The Executive Council may take actions with respect to any AAAI member as the Executive Council deems appropriate including but not limited to terminating the membership of any member who violates the standards set forth in this code of conduct as outlined in Article VI, Section 6 of the AAAI Bylaws.
     
-  Approved January 28, 2019
-  
+  Approved January 28, 2019 
+    
+  ### References
+    
+  [http://swsa.semanticweb.org/content/code-conduct-iswc](http://swsa.semanticweb.org/content/code-conduct-iswc)
+    
+  [http://aaai.org/Organization/bylaws.php](http://aaai.org/Organization/bylaws.php)  
+    
+  [http://aaai.org/Organization/ethics.php](http://aaai.org/Organization/ethics.php)       
+    
+  [http://confcodeofconduct.com/](http://confcodeofconduct.com/)     
+    
+  [https://www.w3.org/Consortium/cepc/](https://www.w3.org/Consortium/cepc/)          
+    
+  [https://www.aclweb.org/adminwiki/index.php?title=Anti-Harassment_Policy](https://www.aclweb.org/adminwiki/index.php?title=Anti-Harassment_Policy)    
+    
+  [https://www.iscb.org/ismbeccb2015-general-info/ismbeccb2015-coc](https://www.iscb.org/ismbeccb2015-general-info/ismbeccb2015-coc)  
+    
+  [https://chi2017.acm.org/diversity-inclusion-statement.html](https://chi2017.acm.org/diversity-inclusion-statement.html)    
+    
+  [http://swsa.semanticweb.org/content/code-conduct-iswc](http://swsa.semanticweb.org/content/code-conduct-iswc) 
+    
+  [https://sites.google.com/view/aiide2017/home/code-of-conduct?authuser=0](https://sites.google.com/view/aiide2017/home/code-of-conduct?authuser=0)   
+    
+  [http://www.humancomputation.com/2017/codeofconduct.html](http://www.humancomputation.com/2017/codeofconduct.html)   
+    
+  [http://www.ifaamas.org/harassment.html](http://www.ifaamas.org/harassment.html)   
+    
+  [https://github.com/Polymer/polymer/wiki/Code-of-Conduct](https://github.com/Polymer/polymer/wiki/Code-of-Conduct)   
+    
+  [http://doi.org/10.1038/nature.2015.18790](http://doi.org/10.1038/nature.2015.18790)  
+    
+  [http://doi.org/10.1038/d41586-018-04212-2](http://doi.org/10.1038/d41586-018-04212-2) 
+    
+  [http://geekfeminism.wikia.com/](http://geekfeminism.wikia.com/)    
+    
+  [http://geekfeminism.wikia.com/wiki/Timeline_of_incidents](http://geekfeminism.wikia.com/wiki/Timeline_of_incidents)  
+    
+  [https://implicit.harvard.edu/implicit/takeatest.html](https://implicit.harvard.edu/implicit/takeatest.html)      
+    
+  [https://www.projectcallisto.org/](https://www.projectcallisto.org/)        
+                
+                
   **For inquiries about this code, please contact [aaaiethics@aaai.org](mailto: aaaiethics@aaai.org)**
