update WS14 zoom link

--- a/sitedata/workshops.yml
+++ b/sitedata/workshops.yml
@@ -270,7 +270,7 @@
     end_time: 2021-2-8 13:00:00+00:00
     name: None
     hosts: None
-  zoom_links:
+  zoom_links: https://zoom.us/j/9316297282
   -
   prerecorded_talks: []
 
