--- a/sitedata/config.yml
+++ b/sitedata/config.yml
@@ -28,5 +28,7 @@ gather_town: https://www.virtualchair.net/events/emnlp2020
 connected_papers_conference_name: AAAI2021
 
 calendar:
-  start: '2020-11-16'
-  end: '2020-11-20'
+  start: '2021-02-02 00:00:00-08:00'
+  end: '2021-02-09 23:59:59-08:00'
+#  start: '2021-2-2'
+#    end: '2021-2-9'
