--- a/sitedata/overall_calendar.yml
+++ b/sitedata/overall_calendar.yml
@@ -80,7 +80,7 @@
 
 - title: "<b>Sponsor/Exhibit Program</b>"
   start: 2021-02-04 10:00:00-08:00
-  end: 2021-02-04 13:30:00-08:00
+  end: 2021-02-04 12:30:00-08:00
   location: sponsors.html
   link: sponsors.html
   category: time
@@ -328,6 +328,16 @@
   type: Plenary
   view: week
 
+- title: "<b>EAAI-21</b>"
+  start: 2021-02-06 09:30:00-08:00
+  end: 2021-02-06 17:15:00-08:00
+  location: eaai.html
+  link: eaai.html
+  category: time
+  calendarId: '---'
+  type: Posters
+  view: week
+
 - title: "<b>AAAI-21 Poster Sessions: AAAI, IAAI, SA, Demos</b>"
   start: 2021-02-06 08:45:00-08:00
   end: 2021-02-06 10:30:00-08:00
@@ -473,6 +483,16 @@
   end: 2021-02-07 10:30:00-08:00
   location: papers.html
   link: papers.html
+  category: time
+  calendarId: '---'
+  type: Posters
+  view: week
+
+- title: "<b>EAAI-21</b>"
+  start: 2021-02-07 10:00:00-08:00
+  end: 2021-02-07 18:00:00-08:00
+  location: eaai.html
+  link: eaai.html
   category: time
   calendarId: '---'
   type: Posters
