--- a/sitedata/sponsors.yml
+++ b/sitedata/sponsors.yml
@@ -58,7 +58,7 @@
 
 - name: Dataminr
   level: Silver
-  logo: Dataminr.png
+  logo: dataminr.png
   logoontop: true
   website: https://www.dataminr.com/
   description: |
@@ -138,6 +138,14 @@
   website: http://wadhwaniai.org/
   description: |
     The Wadhwani Institute for Artificial Intelligence was founded with the vision of applying the power of AI to complex challenges faced by people in the developing world. We are an independent, nonprofit research institute and global hub, developing and deploying AI solutions for social impact. We collaborate with academic institutions, governments, social sector organisations and domain experts to identify real-world challenges, create and deploy innovative machine learning and data science solutions to reach intended beneficiaries ®C with the objective of making a positive difference at both individual and systemic levels. Currently, we are building solutions in agriculture and in healthcare domains such as maternal, newborn and child health and infectious diseases.
+
+- name: AITopics, powered by i2k Connect Inc.
+  level: Exhibitor
+  logo: aitopic.png
+  logoontop: true
+  website: https://aitopics.org/
+  description: |
+    AITopics is a collection of information on research, people, news, and applications of AI. Use artificial intelligence technology to find and analyze news, publications, conference articles, and classics from around the world. AITopics is powered by AI technology from i2k Connect. The i2k AI Platform combines machine learning with subject matter expert knowledge to automatically tag documents with unique, accurate and consistent metadata. Building on the familiar online shopping experience, you can discover and analyze just the information you need. Subscribe to AI-Alerts, a weekly email of stories selected and categorized by i2k NewsFinder.
 # - name: DeepMind
 #   levels:
 #   - Platinum
